author update, spelling corrections, remove ofsted registered

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Cheshire Mobile Crèche is a privately owned company providing bespoke, professional crèche services for weddings and other one-off events in the North West of England">
     <meta name="keywords" content="mobile,event,childcare,creche,cheshire,wedding,bespoke,professional,north west">
-    <meta name="author" content="John Oldfield">
+    <meta name="author" content="Amy and John Oldfield">
     <title>The Cheshire Mobile Cr&egrave;che | Bespoke event childcare</title>
 	<!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -203,7 +203,7 @@
                                 </div>
                             </li>
                            <li>
-                           	Let our qualified, experienced staff entertain your children in a separate room at your wedding venue.<br />
+                           	Let our qualified, experienced staff entertain your children in a separate room at your venue.<br />
                            	We transform a room into a fun and safe environment that will keep your little guests entertained for hours.<br />
                            	As each cr&egrave;che is bespoke we can focus on themes and activities that suit the age range and interests of the children attending.</li>
 <!-- <li>&nbsp;</li>
@@ -318,7 +318,7 @@
                             <span>Lead Practitioner</span>
                         </div>
                         <p>Amy has a wealth of childcare experience and holds professional childcare qualifications and enhanced DBS certificate.</p>
-                        <p>Amy is Paediatric first aid trained and has an extended knowledge and understanding of safeguarding procedures and Ofsted regulations </p>
+                        <p>Amy is Paediatric first aid trained and has an extended knowledge and understanding of safeguarding procedures and Ofsted regulations.</p>
                         <p>In addition to running her own successful childcare business Amy has provided cr&egrave;che services for businesses such as Warrington Borough Council and local youth centres.</p>
 
                         <p>Amy assists in the running of local parent and tots groups on a weekly basis.</p>
@@ -374,7 +374,7 @@
                 <p class="text-center wow fadeInDown">With children of our own we understand the importance of quality childcare.</p>
                 <p class="text-center wow fadeInDown">We hold a database of carefully selected childcare practitioners to enable us to provide the correct staff coverage.</p>
                 <p class="text-center wow fadeInDown">Our team are DBS checked and have experience of working with children. All members of staff wear a uniform so parents and children can recognise us easily.</p>
-                <p class="text-center wow fadeInDown">The <b>Cheshire Mobile Cr&egrave;che</b> are registered and regulated by Ofsted and we strictly adhere to the following Ofsted staff to child ratios. </p>
+                <p class="text-center wow fadeInDown">The <b>Cheshire Mobile Cr&egrave;che</b> strictly adhere to the following Ofsted staff to child ratios. </p>
             </div>
 			<div class="row text-center">
 
@@ -431,7 +431,7 @@
 
 	            <div class="section-header">
 	                <h2 class="section-title text-center wow fadeInDown">Gallery</h2>
-	                <p class="text-center wow fadeInDown"> some photos from our recent photoshoot. Click for larger versions or slideshow</p>
+	                <p class="text-center wow fadeInDown"> Some photos from our recent photoshoot. Click for larger versions or slideshow</p>
 	               
 	            </div>
 
