comment out unused js import and scripts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/owl.transitions.css" rel="stylesheet">
-    <link href="css/prettyPhoto.css" rel="stylesheet">
+    <!--<link href="css/prettyPhoto.css" rel="stylesheet">-->
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
 	<link href="css/nanogallery.min.css" rel="stylesheet" type="text/css">
@@ -511,7 +511,7 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/mousescroll.js"></script>
     <script src="js/smoothscroll.js"></script>
-    <script src="js/jquery.prettyPhoto.js"></script>
+    <!--<script src="js/jquery.prettyPhoto.js"></script>-->
     <script src="js/jquery.isotope.min.js"></script>
     <script src="js/jquery.inview.min.js"></script>
     <script src="js/wow.min.js"></script>
