--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <script src="js/respond.min.js"></script>
     <![endif]-->       
 
+<link rel='canonical' href='http://www.thecheshiremobilecreche.co.uk/' />
+<link rel='shortlink' href='http://www.thecheshiremobilecreche.co.uk/' />
+
 <link rel="shortcut icon" href="images/ico/favicon.ico">
 <link rel="apple-touch-icon" sizes="57x57" href="images/ico/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="images/ico/apple-touch-icon-60x60.png">
