--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                         <div class="col-sm-6">
                             <ul class="nostyle">
                                 <li><i class="fa fa-check-square"></i> Face painting and glitter tattoos</li>
-                                <li><i class="fa fa-check-square"></i> Karaoke, Zumba kids, rhythmn and rhyme with musical instruments</li>
+                                <li><i class="fa fa-check-square"></i> Karaoke, Zumba kids, rhythm and rhyme with musical instruments</li>
                                 <li><i class="fa fa-check-square"></i> Indoor games - parachute play, ride on toys, tents and tunnels</li>
                             </ul>
                         </div>
