lazyloading for iframe for embedded gdocs form to improve page load time

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                               </p>
                             <p class="text-center wow fadeInDown">mobile: <b>07486 439707</b></p>
 
-			        <iframe src="https://docs.google.com/forms/d/1anEe0wYuZa2MtBRhV7evr6mwZ-NY7dMGavXFerhpi-E/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading...
+			        <iframe class="lazyload" data-src="https://docs.google.com/forms/d/1anEe0wYuZa2MtBRhV7evr6mwZ-NY7dMGavXFerhpi-E/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading...
 			        </iframe>
 
 		     	</div>  
@@ -523,6 +523,7 @@
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
     <script type="text/javascript" src="js/jquery.nanogallery.min.js"></script>
+    <script type="text/javascript" src="js/lazysizes.min.js" async=""></script>
 
 
 <script type="text/javascript">
@@ -550,6 +551,14 @@
   ga('send', 'pageview');
 
 </script>
-
+    <!--<script type="text/javascript">-->
+    <!--function init() {-->
+    <!--var vidDefer = document.getElementsByTagName('iframe');-->
+    <!--for (var i=0; i<vidDefer.length; i++) {-->
+    <!--if(vidDefer[i].getAttribute('data-src')) {-->
+    <!--vidDefer[i].setAttribute('src',vidDefer[i].getAttribute('data-src'));-->
+    <!--} } }-->
+    <!--window.onload = init;-->
+    <!--</script>-->
 </body>
 </html>
