--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <div class="col-sm-6">
                     <div class="team-member wow fadeInUp" data-wow-duration="600ms" data-wow-delay="0ms">
                         <div class="team-img">
-                            <img class="img-responsive img-rounded lazyload" data-src="images/tcmc-photos-pro/amy.jpg" alt="Amy Oldfield">
+                            <img class="img-responsive img-rounded" src="images/tcmc-photos-pro/amy.jpg" alt="Amy Oldfield">
                         </div>
                         <div class="team-info">
                             <h3>Amy Oldfield</h3>
@@ -341,7 +341,7 @@
                 <div class="col-sm-6">
                     <div class="team-member wow fadeInUp" data-wow-duration="600ms" data-wow-delay="100ms">
                         <div class="team-img">
-                            <img class="img-responsive img-rounded lazyload" data-src="images/tcmc-photos-pro/jane.jpg" alt="Jane Pearson">
+                            <img class="img-responsive img-rounded" src="images/tcmc-photos-pro/jane.jpg" alt="Jane Pearson">
                         </div>
                         <div class="team-info">
                             <h3>Jane Pearson</h3>
