Add News and Testimonial pages

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                         <li class="scroll"><a href="#meet-team">Meet The Team</a></li>
                         <li class="scroll"><a href="#our-standards">Our Standards</a></li>
                         <li class="scroll"><a href="#gallery">Gallery</a></li>
+                        <li class="scroll"><a href="#news">News</a></li>
+                        <li class="scroll"><a href="#testimonial">Testimonials</a></li>
                         <li class="scroll"><a href="#get-in-touch">Contact Us</a></li>                        
                     </ul>
                     
@@ -449,6 +451,68 @@
 	        </div>
 
     </section>
+
+
+        <section id="news">
+	        <div class="container">
+
+	            <div class="section-header">
+	                <h2 class="section-title text-center wow fadeInDown">News</h2>
+	            </div>
+
+				<div class="row">
+					
+					 <div class="col-sm-6">
+                            <h3>15/02/2016</h3>
+                            <p>We are delighted that the <a href ="http://www.manchestereveningnews.co.uk/business/business-news/cheshire-mobile-crche-launched-experts-10885861">Manchester Evening News</a> have included The Cheshire Mobile Creche in their business news this week. Thank you to Clare <a href="https://twitter.com/fireworkpr">@FireworkPR</a> for your help with our press release.</p>
+
+                            <h3>07/02/2016</h3>
+                            <p>We will be at the <a href="http://www.abodechester.co.uk/occasions-events/events-diary/32-wedding-fayre">Abode Hotel Wedding Fayre</a>, Chester on Sunday 28th February. Join us from 12 noon until 3pm and receive complimentary admission, a glass of Bucks Fizz and information pack on arrival. 
+							We would love to meet you and discuss your requirements and tell us more about the variety of services we offer. Come and say hi!</p>
+                     </div>
+
+					<div class="col-sm-6">
+					<a class="twitter-timeline" href="https://twitter.com/TCMobileCreche" data-widget-id="690850262974595072" height="500px">Tweets by @TCMobileCreche</a>
+					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+					</div>
+				</div>
+			
+
+	        </div>
+
+    </section>
+
+
+        <section id="testimonial">
+	        <div class="container">
+
+	            <div class="section-header">
+	                <h2 class="section-title text-center wow fadeInDown">Testimonials</h2>
+	            </div>
+	            <div class="row">
+					 <div class="col-sm-12">
+                            <blockquote>Amy looked after my daughter, Evie from her being 9 months and made my transition back to work (as a teacher) so much easier. I always knew Evie was happy and extremely well looked after. She loved going and would cheer most mornings when I told her where she was going that day.
+Amy takes the children out most days and encourages their development through well planned, fun activities. 
+She is a wonderfully, caring person and makes everyone feel so welcome. 
+Amy offers a huge variety of engaging toys which Amy rotates regularly. 
+I would highly recommend Amy as a childcare provider. She is professional, kind and fun and always strives to provide the best care for the children in her care. I cannot express fully how grateful I am that she came into our lives.  <br /><i>Beth M : Feb 2016</i></blockquote>
+                     </div>
+
+<div class="col-sm-12">
+                            <blockquote>
+These are the people you need to talk to if you need child care in Cheshire. Absolute professionals and naturals with children.
+Amy was our daughters childminder for 4 years and H absolutely loved being with her. Amy is very caring and encouraging with all the children she looks after and cares for them like her own. 
+We highly recommend Amy. She is a lovely, lovely person.
+<br /><i>Kate & Chris R : Jan 2016</i>
+</blockquote>
+                     </div>
+
+				</div>
+		
+	        </div>
+
+    </section>
+
 
     <section id="get-in-touch">
         <div class="container">
