correct spelling mistake

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
                             <h3>07/02/2016</h3>
                             <p>We will be at the <a href="http://www.abodechester.co.uk/occasions-events/events-diary/32-wedding-fayre">Abode Hotel Wedding Fayre</a>, Chester on Sunday 28th February. Join us from 12 noon until 3pm and receive complimentary admission, a glass of Bucks Fizz and information pack on arrival. 
-							We would love to meet you and discuss your requirements and tell us more about the variety of services we offer. Come and say hi!</p>
+							We would love to meet you and discuss your requirements and tell you more about the variety of services we offer. Come and say hi!</p>
                      </div>
 
 					<div class="col-sm-6">
