--- a/index.html
+++ b/index.html
@@ -507,6 +507,16 @@ We highly recommend Amy. She is a lovely, lovely person.
 </blockquote>
                      </div>
 
+<div class="col-sm-12">
+                            <blockquote>
+I have known Jane professionally and personally for over 15 years. Jane has worked passionately with young people of all ageS. Jane is highly
+professional, committed to best practice and is dedicated to maintaining the highest standards.
+Jane has integrity, honesty and can be relied upon to meet her commitments, her attention to detail ensures she is highly effective at whatever she puts her mind too. You
+are in safe hands with Jane
+<br /><i>Jayne N : Director Career North Ltd</i>
+</blockquote>
+                     </div>
+
 				</div>
 		
 	        </div>
