edit Janes testimonial

--- a/index.html
+++ b/index.html
@@ -509,10 +509,10 @@ We highly recommend Amy. She is a lovely, lovely person.
 
 <div class="col-sm-12">
                             <blockquote>
-I have known Jane professionally and personally for over 15 years. Jane has worked passionately with young people of all ageS. Jane is highly
+I have known Jane professionally and personally for over 15 years. Jane has worked passionately with young people of all ages for 16 years.  She is highly
 professional, committed to best practice and is dedicated to maintaining the highest standards.
-Jane has integrity, honesty and can be relied upon to meet her commitments, her attention to detail ensures she is highly effective at whatever she puts her mind too. You
-are in safe hands with Jane
+Jane has integrity, honesty and can be relied upon to meet her commitments, her attention to detail ensures she is highly effective at whatever she puts her mind to. 
+Her wide range of experiences means she is flexible, adapts easily and responds quickly in all working environments. You are in safe hands with Jane.
 <br /><i>Jayne N : Director Career North Ltd</i>
 </blockquote>
                      </div>
