add Manchester Wedding Fair Event to News

--- a/index.html
+++ b/index.html
@@ -463,6 +463,10 @@
 				<div class="row">
 					
 					 <div class="col-sm-6">
+
+							<h3>12/03/2016</h3>
+                            <p>We will be circulating at the <a href="http://theweddingfairs.com/manchester/"> The Wedding Fair </a>, Manchester on Saturday 12th March 2016. @TheWeddingFairs @EventCityUK. We would love to meet you and discuss the variety of services we offer. Look out for us in the pink t-shirts!</p>
+
                             <h3>15/02/2016</h3>
                             <p>We are delighted that the <a href ="http://www.manchestereveningnews.co.uk/business/business-news/cheshire-mobile-crche-launched-experts-10885861">Manchester Evening News</a> have included The Cheshire Mobile Creche in their business news this week. Thank you to Clare <a href="https://twitter.com/fireworkpr">@FireworkPR</a> for your help with our press release.</p>
 
