replace face painting with photoshoot

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
                         <div class="col-sm-6">
                             <ul class="nostyle">
-                                <li><i class="fa fa-check-square"></i> Face painting and glitter tattoos</li>
+                                <li><i class="fa fa-check-square"></i> Red carpet fun photoshoot with instant photo memento</li>
                                 <li><i class="fa fa-check-square"></i> Karaoke, Zumba kids, rhythm and rhyme with musical instruments</li>
                                 <li><i class="fa fa-check-square"></i> Indoor games - parachute play, ride on toys, tents and tunnels</li>
                             </ul>
