--- a/index.html
+++ b/index.html
@@ -461,19 +461,8 @@
 	            </div>
 
 				<div class="row">
-					
-					 <div class="col-sm-6">
 
-							<h3>12/03/2016</h3>
-                            <p>We will be circulating at the <a href="http://theweddingfairs.com/manchester/"> The Wedding Fair </a>, Manchester on Saturday 12th March 2016. @TheWeddingFairs @EventCityUK. We would love to meet you and discuss the variety of services we offer. Look out for us in the pink t-shirts!</p>
-
-                            <h3>15/02/2016</h3>
-                            <p>We are delighted that the <a href ="http://www.manchestereveningnews.co.uk/business/business-news/cheshire-mobile-crche-launched-experts-10885861">Manchester Evening News</a> have included The Cheshire Mobile Creche in their business news this week. Thank you to Clare <a href="https://twitter.com/fireworkpr">@FireworkPR</a> for your help with our press release.</p>
-
-                            <h3>07/02/2016</h3>
-                            <p>We will be at the <a href="http://www.abodechester.co.uk/occasions-events/events-diary/32-wedding-fayre">Abode Hotel Wedding Fayre</a>, Chester on Sunday 28th February. Join us from 12 noon until 3pm and receive complimentary admission, a glass of Bucks Fizz and information pack on arrival. 
-							We would love to meet you and discuss your requirements and tell you more about the variety of services we offer. Come and say hi!</p>
-                     </div>
+                    <div class="col-sm-6" id="statistics"> <!-- News content is injected in here from the GoogleSpreadsheet--></div>
 
 					<div class="col-sm-6">
 					<a class="twitter-timeline" href="https://twitter.com/TCMobileCreche" data-widget-id="690850262974595072" height="500px">Tweets by @TCMobileCreche</a>
@@ -603,6 +592,9 @@ Her wide range of experiences means she is flexible, adapts easily and responds 
     <script type="text/javascript" src="js/jquery.nanogallery.min.js"></script>
     <script type="text/javascript" src="js/lazysizes.min.js" async=""></script>
 
+    <script src="js/sheetrock.min.js"></script>
+
+
 
 <script type="text/javascript">
       $(document).ready(function () {
@@ -636,6 +628,16 @@ document.addEventListener('lazybeforeunveil', function(e){
     if(bg){
         e.target.style.backgroundImage = 'url(' + bg + ')';
     }
+});
+</script>
+
+<script>
+var mySpreadsheet = 'https://docs.google.com/spreadsheets/d/1n-U9UC9lBoViHzjhXa-meCUnqXysFKyVgOtpAcf5n70/pubhtml?gid=0';
+
+$('#statistics').sheetrock({
+  url: mySpreadsheet,
+  query: "select A,B order by A desc",
+  fetchSize:5
 });
 </script>
 
