--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Cheshire Mobile Crèche is a privately owned company providing bespoke, professional crèche services for weddings and other one-off events in the North West of England">
-    <meta name="keywords" content="creche, childcare, mobile, child care, child minder, childminder, mobile creche, wedding creche, event creche, bespoke, north west, cheshire"> 
+    <meta name="keywords" content="creche, childcare, mobile, child care, child minder, childminder, mobile creche, wedding creche, event creche, bespoke, north west, cheshire, merseyside, wirral, lancashire, manchester, north wales"> 
     <meta name="author" content="Amy and John Oldfield">
     <title>The Cheshire Mobile Cr&egrave;che | Bespoke event childcare</title>
 	<!-- core CSS -->
