replace GSheetNewsfeed with Facebook PagePlugin for News page

--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ document.addEventListener('lazybeforeunveil', function(e){
 });
 </script>
 
-    <!-- Deprecated import of newsfeed from GoogleSpreadsheet-->
+    <!-- Deprecated import of newsfeed from GoogleSpreadsheet TEST-->
     <!--<script>-->
     <!--var mySpreadsheet = 'https://docs.google.com/spreadsheets/d/1n-U9UC9lBoViHzjhXa-meCUnqXysFKyVgOtpAcf5n70/pubhtml?gid=0';-->
 
