picasa api deprecated in favour of google photos api, this now needs OAUTH so nanogallery no longer functions without server side function. Therefore replacing with static gallery image for now

--- a/index.html
+++ b/index.html
@@ -440,16 +440,21 @@
 
 	            <div class="section-header">
 	                <h2 class="section-title text-center wow fadeInDown">Gallery</h2>
-	                <p class="text-center wow fadeInDown"> Some photos from our recent photoshoot. Click for larger versions or slideshow</p>
-	               
+	                <p class="text-center wow fadeInDown"> Some photos from our website photoshoot.</p>
 	            </div>
 
-				<div class="row">
-					<div id="nanoGallery2"></div>
-					<p class="text-center wow fadeInDown">  [All images &copy; <a href="http://www.thecheshiremobilecreche.co.uk">The Cheshire Mobile Cr&egrave;che</a> and/or <a href="http://www.oculusstudios.co.uk/">Oculus Studios</a>] </p>
-				</div>
+				<!-- picasa api has been deprecated in favour of Google Photos API , so nanogallery no longer functions <div class="row">-->
+					<!--<div id="nanoGallery2"></div>-->
+					<!--<p class="text-center wow fadeInDown">  [All images &copy; <a href="http://www.thecheshiremobilecreche.co.uk">The Cheshire Mobile Cr&egrave;che</a> and/or <a href="http://www.oculusstudios.co.uk/">Oculus Studios</a>] </p>-->
+				<!--</div>-->
 
-	        </div>
+                <div class="row">
+                    <img class="img-responsive img-rounded lazyload" data-src="images/gallery/TCMC_Picture_Collage.jpg" alt="photoshoot gallery photos">
+                    <p class="text-center wow fadeInDown">  [All images &copy; <a href="http://www.thecheshiremobilecreche.co.uk">The Cheshire Mobile Cr&egrave;che</a> and/or <a href="http://www.oculusstudios.co.uk/">Oculus Studios</a>] </p>
+                </div>
+
+
+            </div>
 
     </section>
 
